fix: release text margin on mobile

--- a/src/sass/partials/_release.scss
+++ b/src/sass/partials/_release.scss
@@ -95,5 +95,9 @@
     &__buttoncontainer {
       padding-top: 1em;
     }
+
+    &__text {
+      margin-top: 0.5em;
+    }
   }
 }
